<?xml version="1.0"?>
<package>
  <name>pepperl_fuchs_r2000</name>
  <version>0.1.3</version>
  <description>The Pepperl+Fuchs R2000 laser range finder driver package</description>
  <maintainer email="denis.dillenberger@gmail.com">Denis Dillenberger</maintainer>
  <author email="denis.dillenberger@gmail.com">Denis Dillenberger</author> 
  <license>BSD</license>
  <url type="website">http://wiki.ros.org/pepperl_fuchs_r2000</url> 
  <url type="repository">https://github.com/dillenberger/pepperl_fuchs</url>
  <url type="bugtracker">https://github.com/dillenberger/pepperl_fuchs/issues</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>std_msgs</run_depend>

</package>
